# Veda-Final-AI

./: .replit  CSS  CSS Updates  HTML file)  index.css:  main.py  pnpm-lock.yaml  pyproject.toml  render.yaml  render.yaml:  replit.md  requirements.txt  ​requirements.txt:
artifacts/api-server/: build.mjs  package.json
artifacts/api-server/src/routes/chat/: index.ts
artifacts/chat-app/: index.html  package.json  requirements.yaml
artifacts/chat-app/.replit-artifact/: artifact.toml
artifacts/chat-app/public/: manifest.json
artifacts/chat-app/src/: App.tsx  index.css
artifacts/chat-app/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  Sidebar.tsx  TypingIndicator.tsx
artifacts/chat-app/src/components/ui/: button.tsx
artifacts/chat-app/src/hooks/: use-chat.ts
artifacts/chat-app/src/pages/: chat.tsx  not-found.tsx
lib/api-spec/: openapi.yaml
lib/integrations-gemini-ai/src/image/: client.ts
static/: index.css
templates/: index.html
