[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "gunicorn>=25.3.0",
    "openai>=2.32.0",
    "pillow>=12.2.0",
    "pypdf2>=3.0.1",
    "replit>=4.1.2",
    "requests>=2.33.1",
]
